unpackaged/main/default/objects/conference360__Budget_Expense__c/conference360__Budget_Expense__c.object-meta.xml
<CustomObject>
    <label>Budget &amp; Expense</label>
    <nameField>
        <displayFormat>BE-{000000}</displayFormat>
        <label>Budget &amp; Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets &amp; Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>