unpackaged/main/default/objects/conference360__Budget_Expense__c/fields/conference360__Category__c.field-meta.xml
<CustomField>
    <fullName>conference360__Category__c</fullName>
    <description>The Category for this Budget &amp; Expense record. &#39;Other&#39; entries or any custom-added entries will rollup (summarize) to the Event&#39;s Other Total fields.</description>
    <inlineHelpText>The Category for this Budget &amp; Expense record. &#39;Other&#39; entries or any custom-added entries will rollup (summarize) to the Event&#39;s Other Total fields.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audiovisual (AV)</fullName>
            </value>
            <value>
                <fullName>Catering (F&amp;B)</fullName>
            </value>
            <value>
                <fullName>Decor</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing (Social)</fullName>
            </value>
            <value>
                <fullName>Production &amp; Staff</fullName>
            </value>
            <value>
                <fullName>Site Rental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>