unpackaged/main/default/objects/conference360__Budget_Expense__c/fields/conference360__Description__c.field-meta.xml
<CustomField>
    <fullName>conference360__Description__c</fullName>
    <description>Description for this Budget &amp; Expense record.</description>
    <inlineHelpText>Description for this Budget &amp; Expense record.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>